Fix spacing and add missing semicolon in style.css - Fix spacing on div id naming - Add missing semicolon after all attribute declarations

--- a/public/style.css
+++ b/public/style.css
@@ -20,10 +20,10 @@ h1 {
 
 div#chatEntries {
   height: 395px;
-  width: 800px
+  width: 800px;
 }
 
-div #chatControls {
+div#chatControls {
   border-top: solid;
   margin-top: -2px;
 }
